# whatsapp-ctx-cli

./: .gitignore  LICENSE  Makefile  README.md  build_go.py  pyproject.toml
.github/workflows/: build.yml
.sisyphus/plans/: search-upgrade.md
docs/: ALGORITHM_COMPARISON.md  ALGORITHM_FORMULAS.md  ALGORITHM_INDEX.md  ALGORITHM_SPEC.md  README_ALGORITHMS.md  progress_log.ndjson
go/: analytics.go  go.sum  main.go  media.go
skills/wactx/: SKILL.md
tests/: test_config.py  test_db.py  test_sync.py
wactx/: __init__.py  cli.py  config.py  db.py  embed.py  entities.py  graph.py  graph_search.py  pipeline.py  render.py  search.py  sync.py
whatsapp-sync/: go.mod  handler.go  handler_test.go  main.go  store.go
