[project]
name = "whatsapp-ctx-cli"
version = "0.1.0"
description = "Semantic + graph search over your WhatsApp messages"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "duckdb>=1.0",
    "openai>=1.0",
    "rich>=13.0",
]

[project.scripts]
wactx = "wactx.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
include = ["wactx*"]

[tool.setuptools.package-data]
wactx = ["bin/*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
